<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logdemo.LoginActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- 设置布局， 单选按钮，登录方式。密码登录、验证码登录 -->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginrg"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/login_by_pasw"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_radio_height"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/login_by_pasword"
            android:textSize="@dimen/common_font_size"/>

        <RadioButton
            android:id="@+id/login_by_verifycode"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_radio_height"
            android:layout_weight="1"
            android:text="@string/login_by_verifycode"
            android:textSize="@dimen/common_font_size"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_input_height"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="11"
            android:layout_marginTop="2dp"
            android:text="@string/phone_num"
            android:textSize="@dimen/common_font_size"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edphone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="19"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_edit_file"
            android:hint="@string/phone_hint"
            android:inputType="number"
            android:maxLength="11"
            android:textColorHint="@color/gray"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_input_height"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/password"
            android:textSize="@dimen/common_font_size"
            android:textColor="@color/black"/>



        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20">

            <EditText
                android:id="@+id/edpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/shape_edit_file"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLength="11"
                android:textColorHint="@color/gray"/>

            <Button
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="30dp"
                android:text="@string/forget_password"
                android:textSize="@dimen/common_font_size"
                android:textColor="@color/black"/>
        </RelativeLayout>


    </LinearLayout>
    <!-- 记住密码-->
    <!--设置图片尺寸-->
    <CheckBox
        android:id="@+id/id_rem_pasw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:button="@drawable/check_box_selector"
        android:textSize="@dimen/font_size_small"/>

    <Button
        android:id="@+id/id_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/common_font_size"
        android:textColor="@color/black"/>

</LinearLayout>