<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logdemo.ForgetPasswordActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/item_input_height"
            android:layout_weight="10"
            android:textColor="@color/black"
            android:text="@string/re_input_password"
            android:textSize="@dimen/common_font_size"/>

        <EditText
            android:id="@+id/inptCode"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_input_height"
            android:background="@drawable/shape_edit_file"
            android:layout_weight="20"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="30dp"
            android:hint="请输入密码"
            android:inputType="numberPassword"
            android:textColor="@color/gray"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/item_input_height"
            android:layout_weight="10"
            android:textColor="@color/black"
            android:text="@string/confirm_password"
            android:textSize="@dimen/common_font_size"/>

        <EditText
            android:id="@+id/confirmCode"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_input_height"
            android:background="@drawable/shape_edit_file"
            android:layout_weight="20"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="30dp"
            android:hint="确认输入密码"
            android:inputType="numberPassword"
            android:textColor="@color/gray"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="9"
            android:text="@string/vericod"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="21">


            <EditText
                android:id="@+id/vercode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_input_height"
                android:background="@drawable/shape_edit_file"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="30dp"
                android:hint="输入验证码"
                android:inputType="numberPassword"
                android:textColor="@color/gray"/>

            <Button
                android:id="@+id/getVerifyCode"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="30dp"
                android:text="获取验证码"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnupdate"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="确认更改"
        android:textSize="@dimen/common_font_size"
        android:background="@drawable/button_shape"/>


</LinearLayout>